# territorio-ubs

./: README.md  fake.csv  pyproject.toml  requirements.txt  setup.cfg
src/: __init__.py  config_logging.py  consulta.py
tests/: __init__.py  dados_fake.py  test_biblioteca_ubs.py
