[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "territorio-ubs"
version = "0.1.0"
authors = [
  { name="Guilherme Tell", email="tell.medicinal@gmail.com" },
]
description = "Gerenciador de território para Unidades Básicas de Saúde"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Natural Language :: Portuguese (Brazilian)",
]
dependencies = [
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "types-pandas",  # Stubs de tipo para pandas
    "mypy>=1.0.0",  # Verificador de tipos estático
    "typing-extensions>=4.0.0",  # Para recursos mais recentes de typing em versões antigas do Python
]


[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/seu-usuario/territorio-ubs"
"Bug Tracker" = "https://github.com/seu-usuario/territorio-ubs/issues"