[metadata]
name = territorio-ubs
version = 0.1.0
author = Seu Nome
author_email = seu.email@exemplo.com
description = Gerenciador de território para Unidades Básicas de Saúde
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seu-usuario/territorio-ubs
project_urls =
    Bug Tracker = https://github.com/seu-usuario/territorio-ubs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src